Restaurant/force-app/main/default/objects/Distribution_Contract__c/Distribution_Contract__c.object-meta.xml
<CustomObject>
    <label>Distribution Contract</label>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>