Restaurant/force-app/main/default/objects/Distribution_Contract__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>agreed on cost of the products distributed</description>
    <label>Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>