Restaurant/force-app/main/default/objects/Distribution_Contract__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>Distributor__c</referenceTo>
    <relationshipLabel>Distribution Contracts</relationshipLabel>
    <relationshipName>Distribution_Contracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>